--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -30,7 +30,7 @@
  
     // Add the IDs of extensions you want installed when the container is created in the array below.
     "extensions": [
-        "mauve.terraform",
+        "4ops.terraform",
         "mutantdino.resourcemonitor"
     ]
 }
